# distropia

./: .gitignore  CMakeLists.txt  README.md  distropia.kdev4
.kdev4/: distropia.kdev4
include/: distropia.h  process.h
resources/: distropia.qrc  distropia.ui
resources/qml/: main.qml
scripts/: host_os_variant.sh  vm_uptime.sh
src/: CMakeLists.txt  distropia.cpp  main.cpp
